@@ -1,3 +1,11 @@
+* Sat Jul 2 2011 Thunor <thunorsif@hotmail.com>
+- Added a 2.20.0 GTK+ version check for gtk_widget_get_realized and on
+  false will use the deprecated GTK_WIDGET_REALIZED macro.
+- Added code to widget_signal_executor to automate managing the default
+  signal for widget types.
+- Added comboboxtext default signal support for action and action type
+  directives.
+
 * Fri Jul 1 2011 Thunor <thunorsif@hotmail.com>
 - New widget: <comboboxtext></comboboxtext>, full action function set.
 
